--- a/client/SimpleRouge/settings/v2/packages/project.json
+++ b/client/SimpleRouge/settings/v2/packages/project.json
@@ -5,5 +5,22 @@
       "height": 640,
       "fitWidth": true
     }
+  },
+  "physics": {
+    "collisionGroups": [
+      {
+        "index": 1,
+        "name": "monster"
+      },
+      {
+        "index": 2,
+        "name": "hero"
+      }
+    ],
+    "collisionMatrix": {
+      "0": 7,
+      "1": 3,
+      "2": 1
+    }
   }
 }
