怪物画面外出生与像玩家移动

--- a/client/LegendOfArrow/settings/v2/packages/project.json
+++ b/client/LegendOfArrow/settings/v2/packages/project.json
@@ -4,5 +4,10 @@
       "name": "UI_2",
       "value": 8
     }
-  ]
+  ],
+  "general": {
+    "designResolution": {
+      "fitHeight": false
+    }
+  }
 }
